[tool.poetry]
name = "docbr"
version = "0.1.0"
description = ""
authors = ["Lucas Cristovam <lucas.henriques@totvs.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
